--- a/personal-website.html
+++ b/personal-website.html
@@ -6,57 +6,65 @@
     <title>Devansh Deepak</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            background: #f0f0f0;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #6d5b97, #6a82fb);
+            color: #333;
         }
         header {
-            background: #4CAF50;
-            color: white;
+            background: #fff;
+            color: #333;
             padding: 1em;
             text-align: center;
             width: 100%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         main {
-            background: white;
+            background: #fff;
             padding: 2em;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             max-width: 800px;
             width: 100%;
-            margin: 1em;
-            text-align: center;
+            margin: 2em;
+            border-radius: 8px;
         }
         footer {
-            background: #4CAF50;
-            color: white;
+            background: #fff;
+            color: #333;
             padding: 1em;
             text-align: center;
             width: 100%;
             position: fixed;
             bottom: 0;
+            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
         }
         a {
-            color: #4CAF50;
+            color: #6a82fb;
             text-decoration: none;
+        }
+        h1, h2, p {
+            margin: 0.5em 0;
+        }
+        p {
+            line-height: 1.6;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Devansh Deepak's Personal Website</h1>
+        <h1>Devansh Deepak</h1>
     </header>
     <main>
+        <h2>Welcome to My Personal Website</h2>
         <p>Hi, I'm Devansh Deepak. This is my personal website where you can learn more about me and my work.</p>
-        <p><a href="https://my.b12.io/xyz123">Click here to claim your website</a></p>
-        <p><img src="https://my.b12.io/preview.jpg" alt="Preview image" style="max-width: 100%; height: auto;"></p>
-        <p>You can further customize your website by providing your logo and a high-resolution background image for the hero section. You can also ask DALL-E to generate the logo and background image for you.</p>
-        <p>Once you sign up, you can <a href="https://my.b12.io/xyz123">checkout the full website</a> and can do a lot more customization on your website. You can publish it for free. We can't wait to see what you do with it!</p>
+        <img src="https://my.b12.io/preview.jpg" alt="Preview image" style="max-width: 100%; height: auto; border-radius: 8px;">
+        <p>Once you sign up, you can customize your website further and explore all the features available. You can publish it for free. We can't wait to see what you do with it!</p>
     </main>
     <footer>
         <p>&copy; 2024 Devansh Deepak. All rights reserved.</p>
