--- a/personal-website.html
+++ b/personal-website.html
@@ -6,59 +6,96 @@
     <title>Devansh Deepak - Personal Website</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f0f5;
             color: #333;
         }
         header {
-            background-color: #3498db;
+            background-color: #4A90E2;
             color: #fff;
-            padding: 10px 0;
+            padding: 1rem;
             text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
         }
-        .intro {
-            text-align: center;
-            margin-top: 20px;
+        main {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 1.5rem;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .social-links {
-            text-align: center;
-            margin-top: 20px;
+        section {
+            margin-bottom: 2rem;
         }
-        .social-links a {
+        h2 {
+            color: #4A90E2;
+            margin-bottom: 0.5rem;
+        }
+        p {
+            margin-bottom: 1rem;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 0.5rem 0;
+        }
+        a {
+            color: #4A90E2;
             text-decoration: none;
-            color: #3498db;
-            margin: 0 10px;
-            font-size: 18px;
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #2d6bb7;
+        }
+        footer {
+            background-color: #4A90E2;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Devansh Deepak</h1>
-        <p>Welcome to my personal website</p>
+        <h1>Welcome to My Website</h1>
     </header>
-    <div class="container">
-        <section class="intro">
+    <main>
+        <section id="about">
             <h2>About Me</h2>
-            <p>
-                Hello! I'm Devansh Deepak, a passionate individual interested in [your interests/profession]. 
-                I love to explore new ideas and engage in exciting projects. 
-                Feel free to connect with me through the links below!
-            </p>
+            <p>Hello! I'm Devansh Deepak, a student passionate about learning new things and exploring the world of technology.</p>
         </section>
-        <section class="social-links">
-            <h2>Connect with Me</h2>
-            <a href="https://www.linkedin.com/in/devanshdeepak/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/devanshdeepak" target="_blank">GitHub</a>
-            <a href="https://twitter.com/devanshdeepak" target="_blank">Twitter</a>
+
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <p>Here, you can showcase your projects, achievements, or any work you are proud of. This is a great place to display any academic or personal projects.</p>
         </section>
-    </div>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you'd like to get in touch, feel free to reach out via email or follow me on social media.</p>
+            <ul>
+                <li>Email: <a href="mailto:devansh@example.com">devansh@example.com</a></li>
+                <li>LinkedIn: <a href="https://linkedin.com/in/devanshdeepak" target="_blank">linkedin.com/in/devanshdeepak</a></li>
+                <li>Twitter: <a href="https://twitter.com/devanshdeepak" target="_blank">@devanshdeepak</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Devansh Deepak. All rights reserved.</p>
+    </footer>
 </body>
 </html>
